Fix header title in static website HTML

--- a/staticwebsite_demo.html
+++ b/staticwebsite_demo.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My AWS Static Website</h1>
+    <h1>Welcome to EL AWS Static Website</h1>
   </header>
   <main>
     <p>This site is hosted on Amazon S3 and deployed automatically using AWS CodePipeline.</p>
@@ -48,4 +48,5 @@
   </footer>
 </body>
 </html>
+
 
